--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,153 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="378dp"
-        android:layout_height="84dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="66dp" />
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="173dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="TextView" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="63dp"
-        android:layout_height="wrap_content"
-        android:text="3"
-        tools:layout_editor_absoluteX="210dp"
-        tools:layout_editor_absoluteY="171dp" />
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="202dp"
+        android:text="Button" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="252dp" />
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignTop="@+id/button"
+        android:layout_toEndOf="@+id/button"
+        android:text="Button" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="5"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="252dp" />
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignTop="@+id/button"
+        android:layout_toEndOf="@+id/button4"
+        android:text="Button" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="6"
-        tools:layout_editor_absoluteX="210dp"
-        tools:layout_editor_absoluteY="252dp" />
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/button"
+        android:text="Button" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="7"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="322dp" />
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button"
+        android:text="Button" />
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="8"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="322dp" />
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignEnd="@+id/button4"
+        android:layout_below="@+id/button"
+        android:text="Button" />
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="9"
-        tools:layout_editor_absoluteX="210dp"
-        tools:layout_editor_absoluteY="322dp" />
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true"
+        android:text="Button" />
 
     <Button
-        android:id="@+id/buttonDot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="."
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="391dp" />
+        android:id="@+id/button10"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button"
+        android:text="Button" />
 
     <Button
-        android:id="@+id/button0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="391dp" />
+        android:id="@+id/button11"
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button7"
+        android:text="Button" />
 
     <Button
-        android:id="@+id/buttonClc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="C"
-        tools:layout_editor_absoluteX="210dp"
-        tools:layout_editor_absoluteY="391dp" />
+        android:id="@+id/button12"
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/button7"
+        android:layout_toEndOf="@+id/button"
+        android:text="Button" />
 
     <Button
         android:id="@+id/button13"
-        android:layout_width="364dp"
-        android:layout_height="42dp"
-        android:text="="
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="461dp" />
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/button7"
+        android:layout_centerHorizontal="true"
+        android:text="Button" />
 
     <Button
-        android:id="@+id/buttonAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
-        tools:layout_editor_absoluteX="303dp"
-        tools:layout_editor_absoluteY="171dp" />
+        android:id="@+id/button14"
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button11"
+        android:text="Button" />
 
     <Button
-        android:id="@+id/buttonSub"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="-"
-        tools:layout_editor_absoluteX="303dp"
-        tools:layout_editor_absoluteY="252dp" />
+        android:id="@+id/button15"
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/button11"
+        android:layout_toStartOf="@+id/button9"
+        android:text="Button" />
 
     <Button
-        android:id="@+id/buttonMul"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="*"
-        tools:layout_editor_absoluteX="303dp"
-        tools:layout_editor_absoluteY="322dp" />
+        android:id="@+id/button16"
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/button11"
+        android:layout_centerHorizontal="true"
+        android:text="Button" />
 
     <Button
-        android:id="@+id/buttonDiv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="/"
-        tools:layout_editor_absoluteX="303dp"
-        tools:layout_editor_absoluteY="391dp" />
+        android:id="@+id/button17"
+        android:layout_width="78dp"
+        android:layout_height="90dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button14"
+        android:text="Button" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button18"
+        android:layout_width="78dp"
+        android:layout_height="90dp"
+        android:layout_below="@+id/button14"
+        android:layout_toEndOf="@+id/button"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button19"
+        android:layout_width="78dp"
+        android:layout_height="90dp"
+        android:layout_below="@+id/button14"
+        android:layout_centerHorizontal="true"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button20"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button7"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button21"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button11"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button22"
+        android:layout_width="150dp"
+        android:layout_height="77dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button14"
+        android:text="Button" />
+</RelativeLayout>
