--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Disp"
         android:layout_width="match_parent"
         android:layout_height="173dp"
         android:layout_alignParentStart="true"
@@ -18,163 +18,139 @@
         android:text="TextView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button1"
         android:layout_width="78dp"
         android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="202dp"
-        android:text="Button" />
+        android:text="1" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignTop="@+id/button1"
+        android:layout_toEndOf="@+id/button1"
+        android:text="2" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_alignTop="@+id/button1"
+        android:layout_toEndOf="@+id/button2"
+        android:text="3" />
+
+    <Button
+        android:id="@+id/buttonAdd"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/button1"
+        android:text="*" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="78dp"
         android:layout_height="60dp"
-        android:layout_alignTop="@+id/button"
-        android:layout_toEndOf="@+id/button"
-        android:text="Button" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button1"
+        android:text="4" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="78dp"
         android:layout_height="60dp"
-        android:layout_alignTop="@+id/button"
-        android:layout_toEndOf="@+id/button4"
-        android:text="Button" />
+        android:layout_alignEnd="@+id/button2"
+        android:layout_below="@+id/button1"
+        android:text="5" />
 
     <Button
         android:id="@+id/button6"
+        android:layout_width="78dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:text="6" />
+
+    <Button
+        android:id="@+id/buttonSub"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/button"
-        android:text="Button" />
+        android:layout_below="@+id/button1"
+        android:text="-" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="78dp"
         android:layout_height="60dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/button"
-        android:text="Button" />
+        android:layout_below="@+id/button4"
+        android:text="7" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="78dp"
         android:layout_height="60dp"
-        android:layout_alignEnd="@+id/button4"
-        android:layout_below="@+id/button"
-        android:text="Button" />
+        android:layout_below="@+id/button4"
+        android:layout_toEndOf="@+id/button1"
+        android:text="8" />
 
     <Button
         android:id="@+id/button9"
         android:layout_width="78dp"
         android:layout_height="60dp"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/button4"
         android:layout_centerHorizontal="true"
-        android:text="Button" />
+        android:text="9" />
 
     <Button
-        android:id="@+id/button10"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button11"
+        android:id="@+id/buttonDot"
         android:layout_width="78dp"
         android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/button7"
-        android:text="Button" />
+        android:text="." />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/button0"
         android:layout_width="78dp"
         android:layout_height="60dp"
         android:layout_below="@+id/button7"
-        android:layout_toEndOf="@+id/button"
-        android:text="Button" />
+        android:layout_toStartOf="@+id/button6"
+        android:text="0" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/buttonClc"
         android:layout_width="78dp"
         android:layout_height="60dp"
         android:layout_below="@+id/button7"
         android:layout_centerHorizontal="true"
-        android:text="Button" />
+        android:text="C" />
 
     <Button
-        android:id="@+id/button14"
-        android:layout_width="78dp"
+        android:id="@+id/buttonMul"
+        android:layout_width="150dp"
         android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button11"
-        android:text="Button" />
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button4"
+        android:text="*" />
 
     <Button
-        android:id="@+id/button15"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/button11"
-        android:layout_toStartOf="@+id/button9"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button16"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/button11"
-        android:layout_centerHorizontal="true"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button17"
-        android:layout_width="78dp"
-        android:layout_height="90dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button14"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button18"
-        android:layout_width="78dp"
-        android:layout_height="90dp"
-        android:layout_below="@+id/button14"
-        android:layout_toEndOf="@+id/button"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button19"
-        android:layout_width="78dp"
-        android:layout_height="90dp"
-        android:layout_below="@+id/button14"
-        android:layout_centerHorizontal="true"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button20"
+        android:id="@+id/buttonDiv"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/button7"
-        android:text="Button" />
+        android:text="/" />
 
     <Button
-        android:id="@+id/button21"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button11"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button22"
-        android:layout_width="150dp"
+        android:id="@+id/buttonEql"
+        android:layout_width="match_parent"
         android:layout_height="77dp"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button14"
-        android:text="Button" />
+        android:layout_below="@+id/buttonDot"
+        android:text="=" />
 </RelativeLayout>
