--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,156 +1,247 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/calculator_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:ignore="HardcodedText">
 
+    <TextView
+        android:id="@+id/Res"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:fontFamily="sans-serif-light"
+
+        android:gravity="start|center"
+        android:maxLines="1"
+        android:text="0"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/Disp"
         android:layout_width="match_parent"
-        android:layout_height="173dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:text="TextView" />
+        android:layout_height="0dp"
+        android:layout_weight="2.4"
+        android:fontFamily="sans-serif-light"
+        android:gravity="right|center"
+        android:lines="1"
+        android:textSize="30sp" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="202dp"
-        android:text="1" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_alignTop="@+id/button1"
-        android:layout_toEndOf="@+id/button1"
-        android:text="2" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_alignTop="@+id/button1"
-        android:layout_toEndOf="@+id/button2"
-        android:text="3" />
-
-    <Button
-        android:id="@+id/buttonAdd"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/button1"
-        android:text="*" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button1"
-        android:text="4" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_alignEnd="@+id/button2"
-        android:layout_below="@+id/button1"
-        android:text="5" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true"
-        android:text="6" />
-
-    <Button
-        android:id="@+id/buttonSub"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button1"
-        android:text="-" />
-
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button4"
-        android:text="7" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/button4"
-        android:layout_toEndOf="@+id/button1"
-        android:text="8" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/button4"
-        android:layout_centerHorizontal="true"
-        android:text="9" />
-
-    <Button
-        android:id="@+id/buttonDot"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button7"
-        android:text="." />
-
-    <Button
-        android:id="@+id/button0"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/button7"
-        android:layout_toStartOf="@+id/button6"
-        android:text="0" />
-
-    <Button
-        android:id="@+id/buttonClc"
-        android:layout_width="78dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/button7"
-        android:layout_centerHorizontal="true"
-        android:text="C" />
-
-    <Button
-        android:id="@+id/buttonMul"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button4"
-        android:text="*" />
-
-    <Button
-        android:id="@+id/buttonDiv"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button7"
-        android:text="/" />
-
-    <Button
-        android:id="@+id/buttonEql"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="77dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/buttonDot"
-        android:text="=" />
-</RelativeLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button7"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:cursorVisible="false"
+            android:text="7" />
+
+        <Button
+            android:id="@+id/button8"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="8" />
+
+        <Button
+            android:id="@+id/button9"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="9"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/buttonClc"
+            android:textColor="@color/clc"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="C" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button4"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="4" />
+
+        <Button
+            android:id="@+id/button5"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:text="5" />
+
+        <Button
+            android:id="@+id/button6"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="6" />
+
+        <Button
+            android:id="@+id/buttonMul"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:text="*" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button1"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="1" />
+
+        <Button
+            android:id="@+id/button2"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:text="2" />
+
+        <Button
+            android:id="@+id/button3"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:text="3" />
+
+        <Button
+            android:id="@+id/buttonDiv"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:text="/" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button0"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:text="0" />
+
+        <Button
+            android:id="@+id/buttonDot"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="." />
+
+        <Button
+            android:id="@+id/buttonAdd"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="+" />
+
+        <Button
+            android:id="@+id/buttonSub"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="-" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/buttonDel"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:text="Del" />
+
+        <Button
+            android:id="@+id/buttonPer"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:text="%" />
+
+        <Button
+            android:id="@+id/buttonEql"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:textColor="@color/eqltc"
+            android:background="@color/eql"
+            android:text="="
+            android:textSize="26sp" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
